Linked main.CSS on each Page

--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <!-- Marking CSS Styling to move when refactoring -->
-    <style>
-        * {
-            font-family: 'Roboto', sans-serif;
-        }
-        marquee {
-                color:goldenrod;
-                font-size: 50px;
-        }
-    </style>
+    <link href="main.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <header>
@@ -81,11 +72,9 @@
 </section>
 </Main>
 <br>
-<!-- I had to remove because of w3 Validation :(
-<marquee>/!\/!\/!\ CAUTION: WEBSITE UNDER CONSTRUCTION /!\/!\/!\</marquee>
 
-This looks really cool BTW
--->
+
+
 <hr>
 <footer id="contact">
     <p>Email: Triston.Babers.Official@gmail.com</p>
