--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
-<body>
+<body id="homeBody">
 <header id="homeHeader">
     <noscript>
         <h1>Triston Babers Portfolio</h1>
