--- a/notes.html
+++ b/notes.html
@@ -123,7 +123,7 @@
                         <li>ECE 45 - 4.0</li>
                     </ul>
                 </td>
-                <td class="currentTerm">
+                <td id="currentTerm">
                     <ul>
                         <li>CSE 134B - 4.0</li>
                         <li>Math 20D - 4.0</li>
