Most of CSS Completed

--- a/experiments.html
+++ b/experiments.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
+    <!-- Styles -->
     <link href="main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap&family=Lato:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -35,9 +39,8 @@
             </li>
         </ul>
     </nav>
-    <p>This page is where I show off some of my <b>amazing</b> web-developer experiments.</p>
+    <p>This page is where I show off some of my more <i>experimental</i> web-development work.</p>
 </header>
-<main>
 <section id="codeUnexpected">
     <h3>The code tag did not work as expected:</h3>
     <code>
@@ -59,7 +62,6 @@
         <figcaption>This is r/wallstreetbets material</figcaption>
       </figure>
 </section>
-
 <section id="importantForm">
     <h3>This is the most important form in the world! <s>not really</s></h3>
     <form action="https://preeminent-tapioca-032369.netlify.app/experiments.html", method="get">
@@ -163,9 +165,8 @@
         <li>Pineapple</li>
     </ol>
 </section>
-</main>
-<hr>
 <footer id="contact">
+    <hr>
     <p>Email: Triston.Babers.Official@gmail.com</p>
     <p>Phone#: (252) 876-8922</p>
     <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
