--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
     <meta name="viewport" content="user-scalable=no" />
+    <!-- Styles -->
+    <link href="main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap&family=Lato:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body id="homeBody">
 <header id="homeHeader">
-    <noscript>
-        <h1>Triston Babers Portfolio</h1>
-    </noscript>
     <!-- Reminder to remove width & height when switching to CSS! -->
     <picture id="bannerImg">
         <img width="1280" height="720" src="assets/images/Portfolio%20Site.jpg" alt="Image of Triston Babers at his Computer, he looks rather busy" draggable="false">
@@ -49,12 +47,12 @@
 <main>
 <section id="about">
     <h2>About Me</h2>
-    <p>I am a Computer Engineering Major at UCSD. My favorite hobbies are Reading, Playing Videogames, and Watching Anime.</p>
     <aside>
         <img width="500" height="650" src="assets/images/surf%20picture.jpg" alt="Picture of Triston at the Beach" draggable="false">
         <p><em>hit:</em> JoJo References</p>
         <p><em>miss:</em> Chalkboards (they scare me)</p>
     </aside>
+    <p>I am a Computer Engineering Major at UCSD. My favorite hobbies are reading, playing videogames, and watching Anime. I also go surfing sometimes, as you can see by the image.</p>
 </section>
 <br>
 <section id="resume">
