--- a/notes.html
+++ b/notes.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
+    <!-- Styles -->
     <link href="main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap&family=Lato:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -35,14 +39,11 @@
             </li>
         </ul>
     </nav>
-</header>
-<main>
     <p>This page is used to store some of my notes that I check often, feel free to borrow anything you find useful! &#128515;</p>
-</main>
+</header>
 <section id="coursePlanner">
     <h3>UCSD Course Planning Table</h3>
     <table>
-        <caption>🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦⬛🟦</caption>
         <thead>
             <th colspan="5">Course Planner</th>
         <colgroup>
@@ -309,8 +310,8 @@ endif
         <hr>
     </details>
 </section>
-<hr>
 <footer id="contact">
+    <hr>
     <p>Email: Triston.Babers.Official@gmail.com</p>
     <p>Phone#: (252) 876-8922</p>
     <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
