--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
-    <meta name="viewport" content="user-scalable=no" />
+    <meta name="viewport" content="user-scalable=no">
     <!-- Styles -->
     <link href="main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,6 +44,9 @@
             <li>
                 <a href="experiments.html">Experiments</a>
             </li>
+            <a href="javascript:void(0);" class="icon" onclick="navBarToggle()">
+                <img id="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+            </a>
         </ul>
     </nav>
 </header>
@@ -83,5 +86,16 @@
     <p>Phone#: (252) 876-8922</p>
     <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
 </footer>
+<!-- Javascript Here!!! Makes Navbar Work !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+<script>
+    function navBarToggle() {
+      var navBar = document.querySelectorAll("nav");
+      if (navBar.style.display === "block") {
+        navBar.style.display = "none";
+      } else {
+        navBar.style.display = "block";
+      }
+    }
+    </script>
 </body>
 </html>
