Could not get NavBar to Work

--- a/rickroll.html
+++ b/rickroll.html
@@ -14,9 +14,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap&family=Lato:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
 </head>
-
-<video width="720" autoplay>
-    <source src="assets/videos/experiments/Rick Astley - Never Gonna Give You Up (Official Music Video).mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-<p>I removed the controls, have fun! <b>:)</b></p>
+<body>
+    <header>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html#about">Triston Babers</a>
+				</li>
+				<li>
+					<a href="index.html#resume">Resume</a>
+				</li>
+				<li>
+					<a href="index.html#projects">Projects</a>
+				</li>
+				<li>
+					<a href="index.html#contact">Contact</a>
+				</li>
+				<li>
+					<a href="notes.html">Notes</a>
+				</li>
+				<li>
+					<a href="experiments.html">Experiments</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+    <video width="720" autoplay>
+        <source src="assets/videos/experiments/Rick Astley - Never Gonna Give You Up (Official Music Video).mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <p>I removed the controls, have fun! <b>:)</b></p>
+</body>
