--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
     <meta name="viewport" content="user-scalable=no">
+    <!-- Preload Images -->
+    <link rel="preload" as="img" href="/assets/images/banner/Portfolio-Mobile.jpg" media="(mobile) or (max-width: 700px)">
+    <link rel="preload" as="img" href="/assets/images/banner/Portfolio-Large.webp" media="not (mobile) and (max-width: 1500px)">
     <!-- Styles -->
     <link href="main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300&display=swap&family=Lato:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
-    <!-- Preload Images -->
 </head>
 <body id="homeBody">
 <header id="homeHeader">
     <!-- Reminder to remove width & height when switching to CSS! -->
     <picture id="bannerImg">
-        <source media="(max-width: 699px)" srcset="/assets/images/Banner/Portfolio-Mobile.jpg">
-        <source media="(min-width: 700px)" srcset="/assets/images/banner/Portfolio-Large.webp">
+        <source media="(mobile) or (max-width: 700px)" srcset="/assets/images/banner/Portfolio-Mobile.jpg">
+        <source media="not (mobile) and (max-width: 1500px)" srcset="/assets/images/banner/Portfolio-Large.webp">
         <img src="/assets/images/banner/Portfolio-Large.webp" alt="Image of Triston Babers at his Computer, he looks rather busy">
     </picture>
     <nav>
@@ -29,6 +31,18 @@
             <li>
                 <a href="#about">Triston Babers</a>
             </li>
+            <div id="#openHamburger"></div>
+            <div  id="#closeHamburger"></div>
+        <div>
+            <a class="open" href="#openHamburger">
+                OPEN TEXT
+                <!--<img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">-->
+            </a>
+            <a class="close" href="#closeHamburger">
+                CLOSE TEXT
+                <!--<img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">-->
+            </a>
+            
             <li>
                 <a href="#resume">Resume</a>
             </li>
@@ -44,9 +58,7 @@
             <li>
                 <a href="experiments.html">Experiments</a>
             </li>
-            <a href="javascript:void(0);" class="icon" onclick="navBarToggle()">
-                <img id="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
-            </a>
+        </div>
         </ul>
     </nav>
 </header>
@@ -86,16 +98,5 @@
     <p>Phone#: (252) 876-8922</p>
     <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
 </footer>
-<!-- Javascript Here!!! Makes Navbar Work !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-<script>
-    function navBarToggle() {
-      var navBar = document.querySelectorAll("nav");
-      if (navBar.style.display === "block") {
-        navBar.style.display = "none";
-      } else {
-        navBar.style.display = "block";
-      }
-    }
-    </script>
 </body>
 </html>
