Working-ish mobile

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             </li>
             <div id="#openHamburger"></div>
             <div  id="#closeHamburger"></div>
-        <div>
+        <div><!--<
             <a class="open" href="#openHamburger">
                 OPEN TEXT
-                <!--<img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">-->
+                img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
             </a>
             <a class="close" href="#closeHamburger">
                 CLOSE TEXT
-                <!--<img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">-->
-            </a>
+                <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px"
+            </a>>-->
             
             <li>
                 <a href="#resume">Resume</a>
