Working mobile not really

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <li>
                 <a href="#about">Triston Babers</a>
             </li>
+            <!--<
             <div id="#openHamburger"></div>
             <div  id="#closeHamburger"></div>
-        <div><!--<
+        <div>
             <a class="open" href="#openHamburger">
                 OPEN TEXT
                 img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
@@ -58,7 +59,8 @@
             <li>
                 <a href="experiments.html">Experiments</a>
             </li>
-        </div>
+        <!--
+        </div>-->
         </ul>
     </nav>
 </header>
