Got Nav Bar working with Pure CSS

--- a/404.html
+++ b/404.html
@@ -16,9 +16,13 @@
 </head>
 <body>
 <header>
-    <!-- Reminder to remove width & height when switching to CSS! -->
-    <img width= "1400" height="900" src="assets/images/404.png" alt="404 Page Image" draggable="false"></img>
-    <aside>You seem lost, maybe a link will help:</aside>
+    <button id="openHamburger"></button>
+    <a href="#openHamburger" class="hamToggleOn">
+        <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+    </a>
+    <a href="#closeHamburger" class="hamToggleOff">
+        <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+    </a>
     <nav>
         <ul>
             <li>
