--- a/experiments.html
+++ b/experiments.html
@@ -17,6 +17,13 @@
 <body>
 <header>
     <h1>Experiments</h1>
+    <button id="openHamburger"></button>
+    <a href="#openHamburger" class="hamToggleOn">
+        <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+    </a>
+    <a href="#closeHamburger" class="hamToggleOff">
+        <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+    </a>
     <nav>
         <ul>
             <li>
