--- a/notes.html
+++ b/notes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Triston Babers: Notes</title>
@@ -16,6 +15,13 @@
 </head>
 <body>
 <header>
+    <button id="openHamburger"></button>
+    <a href="#openHamburger" class="hamToggleOn">
+        <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+    </a>
+    <a href="#closeHamburger" class="hamToggleOff">
+        <img class="hamburger" src="assets/images/hamburger.webp" width="60px", height="60px">
+    </a>
     <h1>Notes</h1>
     <nav>
         <ul>
@@ -310,7 +316,7 @@ endif
         <hr>
     </details>
 </section>
-<footer id="contact">
+<footer class="contact">
     <hr>
     <p>Email: Triston.Babers.Official@gmail.com</p>
     <p>Phone#: (252) 876-8922</p>
