Updated Screen Sizing (HTML)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header id="homeHeader">
     <!-- Reminder to remove width & height when switching to CSS! -->
     <picture id="bannerImg">
-        <source media="(mobile) or (max-width: 700px)" srcset="/assets/images/banner/Portfolio-Mobile.jpg">
+        <source media="(mobile) or (min-width: 1px)" srcset="/assets/images/banner/Portfolio-Mobile.jpg">
         <source media="not (mobile) and (max-width: 1500px)" srcset="/assets/images/banner/Portfolio-Large.webp">
         <img src="/assets/images/banner/Portfolio-Large.webp" alt="Image of Triston Babers at his Computer, he looks rather busy">
     </picture>
