Final Commit for Homework 2

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 <section id="resume">
     <h2>Resume</h2>
     <iframe src="/assets/documents/Triston%20Babers%20Resume.pdf" width="900" height="700"></iframe>
+    <p class="iframeReplace">
+        You can view my Resume by clicking here: <a href="/assets/documents/Triston%20Babers%20Resume.pdf">Triston Babers' Resume</a>!
+    </p>
 </section>
 <br>
 <section id="projects">
@@ -84,12 +87,11 @@
     </template>
 </section>
 </main>
-<br>
-<hr>
 <footer id="contact">
+    <hr>
     <p>Email: Triston.Babers.Official@gmail.com</p>
     <p>Phone#: (252) 876-8922</p>
-    <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
+    <p>GitHub: <a href="https://github.com/TristonBabers">@TristonBabers</a></p>
 </footer>
 </body>
 </html>
