--- a/experiments.html
+++ b/experiments.html
@@ -176,7 +176,7 @@
     <hr>
     <p>Email: Triston.Babers.Official@gmail.com</p>
     <p>Phone#: (252) 876-8922</p>
-    <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
+    <p>GitHub: <a href="https://github.com/TristonBabers">@TristonBabers</a></p>
 </footer>
 </body>
 </html>
