--- a/notes.html
+++ b/notes.html
@@ -320,7 +320,7 @@ endif
     <hr>
     <p>Email: Triston.Babers.Official@gmail.com</p>
     <p>Phone#: (252) 876-8922</p>
-    <p>GitHub: <a href="https://github.com/TristonBabers">TristonBabers</a></p>
+    <p>GitHub: <a href="https://github.com/TristonBabers">@TristonBabers</a></p>
 </footer>
 </body>
 </html>
